Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Tupi</h1>
-      <h2 class="project-tagline">A language and compiler support to describe, expand and execute extended finite-state machines</h2>
+      <h2 class="project-tagline">Language and compiler support to describe, expand and execute extended finite-state machines</h2>
       <a href="https://github.com/fmca/Tupi" class="btn">View on GitHub</a>
       <a href="https://github.com/fmca/Tupi/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/fmca/Tupi/tarball/master" class="btn">Download .tar.gz</a>
@@ -22,7 +22,7 @@
       <h1>
 <a id="tupi" class="anchor" href="#tupi" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tupi</h1>
 
-<p>A language and interpreter support to describe, expand and execute extended finite-state machines (EFSM).</p>
+<p>Language and interpreter support to describe, expand and execute extended finite-state machines (EFSM).</p>
 
 <h3>
 <a id="language" class="anchor" href="#language" aria-hidden="true"><span class="octicon octicon-link"></span></a>Language</h3>
